Create alinhamento vertical

--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -12,10 +12,12 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
             width: 400px;
+            height: 1800px;
             padding: 10px;
             margin: auto;
             border: 3px solid black;
